# psdata

./: .gitignore  MANIFEST.in  README.md  README.uk.md  pyproject.toml
docs/: API.en.md  API.uk.md  FORMAT.en.md  FORMAT.uk.md
examples/: README.md  basic_usage.py  export_usage.py  numpy_usage.py
psdata/: __init__.py  api.py  arrays.py  exporter.py  model.py  parser.py  reader.py
psdata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
