[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psdata"
version = "0.2.0"
description = "Typed Python reader for PicoScope 6 .psdata/.pssettings files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "WTFPL" }
authors = [{ name = "psdata contributors" }]
keywords = ["picoscope", "psdata", "oscilloscope", "binary-parser", "waveform"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
numpy = ["numpy>=1.26"]

[project.scripts]
psdata-export = "psdata.exporter:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["psdata*"]

[tool.setuptools.package-data]
psdata = ["py.typed"]
